--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,11 +17,10 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
   get-num-square:
+    needs: Explore_GitHub_Actions
     runs-on: ubuntu-latest
     name: Returns the number square
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
       - name: Fetch num squared
         id: get_square
         uses: ./ # Uses an action in the root directory
