--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -21,6 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Returns the number square
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
       - name: Fetch num squared
         id: get_square
         uses: ./ # Uses an action in the root directory
