--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,6 +1,10 @@
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
+
+env:
+  DAY_OF_WEEK: Monday
+
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
@@ -16,6 +20,8 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+      - run: echo "The first day of the week is $DAY_OF_WEEK!"
+      - run: echo "Please contact ${{env.CONTACT_PERSON}} under alias ${{secrets.SPY_NAME}}."
   get-num-square:
     needs: Explore-GitHub-Actions
     runs-on: ubuntu-latest
