--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,6 +8,7 @@ env:
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
+    environment: Dev
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
@@ -21,7 +22,7 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - run: echo "The first day of the week is $DAY_OF_WEEK!"
-      - run: echo "Please contact ${{env.CONTACT_PERSON}} under alias ${{secrets.SPY_NAME}}."
+      - run: echo "Please contact ${{ env.CONTACT_PERSON }} under alias ${{ secrets.SPY_NAME }}."
   get-num-square:
     needs: Explore-GitHub-Actions
     runs-on: ubuntu-latest
