--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -29,6 +29,13 @@ jobs:
       - name: Build
         id: build_step
         run: echo "build_id=$RANDOM" >> $GITHUB_OUTPUT
+      - run: echo "The build_id is set to ${{ steps.build_step.outputs.build_id }}." 
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: my-artifact
+          path: requirements.txt
+          retention-days: 2
     outputs:
       build_id: ${{ steps.build_step.outputs.build_id }}
   get-num-square:
@@ -41,9 +48,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Fetch num squared
         id: get_square
-        uses: ./ # Uses an action in the root directory
-        # or use a released GitHub Action
-        # uses: shipyard/github-action/fetch-shipyard-env@1.0.0
+        uses: ./ # Uses the action.yml in the root directory
         with:
           num: 11
       - name: Print the square
@@ -56,3 +61,4 @@ jobs:
       build_id: 1
       deploy_target: "C:/temp"
       perform_deploy: true
+
