--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Custom GitHub Action'
+name: 'Composite GitHub Action'
 description: 'A GitHub Action that takes an input and returns the square of the number'
 inputs:
   num:
